# mcp-server-vision

./: .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  config.yaml.example  pyproject.toml
src/vision_mcp/: __init__.py  __main__.py  config.py  media.py  security.py  server.py
src/vision_mcp/providers/: __init__.py  base.py
tests/: test_config.py  test_media.py  test_providers.py  test_security.py  test_server.py
