[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-mcp"
version = "2.0.0"
description = "Production-grade Vision MCP Server for Claude Code - Multi-provider image/video analysis with security-first design"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Vision MCP Contributors" }
]
keywords = ["mcp", "vision", "claude-code", "multimodal", "image-analysis", "video-analysis", "ocr"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
video = [
    "opencv-python>=4.8.0",
]

[project.scripts]
vision-mcp = "vision_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/vision-mcp"
Repository = "https://github.com/yourusername/vision-mcp"
Documentation = "https://github.com/yourusername/vision-mcp#readme"
Issues = "https://github.com/yourusername/vision-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=vision_mcp --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
